# exercise2-markaren

./: CMakeLists.txt  README.md
.github/classroom/: autograding.json
include/: Person.hpp
src/: CMakeLists.txt  Person.cpp
tests/: CMakeLists.txt  test_person.cpp
